# Railway-Intelligence-System

./: OPTIMIZATION_SETUP.md  README.md  SCRIPT_USAGE.md  SETUP_GUIDE.md  api-doc.md  check-status.ps1  deployment-infrastructure-guide.md  docker-compose.yml  implementation-strategy.md  manual-run.md  procedure.md  research.md  simple-status.ps1  start-all-dev.ps1  start-all-docker.ps1  start-all-manual.ps1  start-frontend.ps1  stop-all.ps1  technical-research-analysis.md  test_optimization_interface.py
backend/: COMPILATION_FIXES.md  Cargo.toml  OPTIMIZATION_INTERFACE_COMPLETE.md  OPTIMIZATION_QUICKSTART.md  README_BACKEND.md  WARP.md  build.rs  config.toml  start-backend.ps1  start-database.ps1  start-optimizer.ps1
backend/docs/: Railway Intelligence System - API D.txt  development-roadmap.md
backend/proto/: optimization.proto
backend/src/: main.rs
backend/src/api/: analytics.rs  ingestion.rs  mod.rs  optimization.rs  sections.rs  simulation.rs  trains.rs
backend/src/auth/: mod.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs
backend/src/ingestion/: mod.rs
backend/src/metrics/: mod.rs
backend/src/models/: events.rs  mod.rs  optimization.rs  section.rs  train.rs
backend/src/services/: conflict_detection.rs  grpc_client.rs  ingestion_service.rs  mod.rs  optimization_converter.rs  optimization_service.rs  train_service.rs
backend/src/synthetic/: disruption_generator.rs  mod.rs  section_generator.rs  train_generator.rs
backend/src/websocket/: mod.rs
backend/tests/: integration_tests.rs  optimization_integration_tests.rs
(+51 files in other folders)
